<resources>
    <string name="app_name">kCal Count</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>

    <string name="calorie_counter">Calorie Counter</string>
    <string name="food">Food</string>
    <string name="activity">Activity</string>
    <string name="resources">Resources</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="title_activity_calorie_counter">Calorie Counter</string>
    <string name="title_activity_food_main">Nutrition</string>
    <string name="title_activity_activities_main">Physical Activity</string>
    <string name="title_activity_resources_main">Healthy Resources</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_food">MyFood</string>
    <string name="title_activity_general_food">GeneralFood</string>
    <string name="title_activity_general_activities">GeneralActivities</string>
    <string name="title_activity_my_activities">MyActivities</string>
    <string name="title_activity_saved_foods">SavedFoods</string>
    <string name="title_activity_add_food">AddFood</string>
    <string name="title_activity_edit_saved_food">EditSavedFood</string>
    <string name="title_activity_saved_activities">SavedActivities</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_add_new">AddNewAct</string>
    <string name="title_activity_edit_saved">EditSavedAct</string>
    <string name="title_activity_consumed_food">ConsumedFood</string>
    <string name="title_activity_undertaken">UndertakenActivity</string>
    <string name="title_activity_day_breakdown">DayBreakdown</string>

    <string name="Resource_Link_Description_BBC_GoodFood">Click on this link to visit BBC Foods and see the foods available there</string>
    <string name="Resource_Link__Description_Nutrition.gov">Visit Nutrition.gov, a USDA sponsored website offering credible nutritional advice and information</string>
    <string name="Resource_Link_Description_MyFitnessPal_Food_Database">Click this link to view an extensive, collaboratively produced database containing inforamtion
    on the nutritional values of thousands of foods</string>
    <string name="Resource_Link_Description_BordBia">Visit the Bord Bia website to easily source information about food and drink products from Ireland</string>
    <string name="Resource_Link_Description_World_Health_Organisation">Find information about general physical activity guidelines from the World Health Organisation\'s Global Strategy on Diet, Physical Activity and Health</string>
    <string name="Resource_Link_Description_Health_ie">Read about physical activity guidelines set out by the Irish Health Department for children, adults and people with disabilities.</string>
    <string name="Resource_Link_Description_Health_Status_Energy_Expend_Calculator">Visit HealthStatus.com to find information related to energy used during various physical activities including everyday tasks such as driving, reading and talking on the phone</string>
    <string name="Resource_Link_Description_BMI_Calculator">Calculate your body mass index with this easy to use BMI calculator</string>
    <string name="Resource_Link_Description_BMR_Calculator">Follow this link to calculate you basal metablolic rate</string>
    <string name="Resource_Link_Description_FitDay_Fitness_Components">Visit FitDay.com to find information about the 5 main components of fitness</string>


    <string name="Resource_Link_BBC_GoodFood"><![CDATA[<a href=\'https://www.bbcgoodfood.com//\'>BBC GoodFood</a><br/>]]></string>
    <string name="Resource_Link_Nutrition_gov"><![CDATA[<a href=\'https://www.nutrition.gov//\'>Nutrition.gov</a><br/>]]></string>
    <string name="Resource_Link_MyFitnessPal_Food_Database"><![CDATA[<a href=\'https://www.myfitnesspal.com/food/calorie-chart-nutrition-facts//\'>MyFitnessPal.com</a><br/>]]></string>
    <string name="Resource_Link_BordBia"><![CDATA[<a href=\'https://www.bordbia.ie/Pages/Default.aspx//\'>Bord Bia</a><br/>]]></string>
    <string name="Resource_Link_World_Health_Organisation"><![CDATA[<a href=\'http://www.who.int/dietphysicalactivity/factsheet_adults/en///\'>World Health Organisation</a><br/>]]></string>
    <string name="Resource_Link_Health_ie"><![CDATA[<a href=\'https://health.gov.ie/healthy-ireland/physical-activity/recommended-guidelines///\'>Health.gov.ie</a><br/>]]></string>
    <string name="Resource_Link_Health_Status_Energy_Expend_Calculator"><![CDATA[<a href=\'https://www.healthstatus.com/calculate/cbc//\'>HealthStatus.com</a><br/>]]></string>
    <string name="Resource_Link_BMI_Calculator"><![CDATA[<a href=\'https://www.bmicalculator.ie///\'>BMI Calculator</a><br/>]]></string>
    <string name="Resource_Link_BMR_Calculator"><![CDATA[<a href=\'http://www.bmi-calculator.net/bmr-calculator///\'>BMR Calculator</a><br/>]]></string>
    <string name="Resource_Link_FitDay_Fitness_Components"><![CDATA[<a href=\'https://www.fitday.com/fitness-articles/fitness/body-building/the-5-components-of-physical-fitness.html//\'>Components of Fitness</a><br/>]]></string>


</resources>
